# noet

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  protocol.yaml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  config.rs  editor.rs  error.rs  extension_client.rs  image_handler.rs  main.rs  native_messaging.rs  rate_limiter.rs  tui_diff.rs  workspace.rs
apps/cli/src/api/: analytics.rs  article.rs  engagement.rs  magazine.rs  tag.rs  user.rs
apps/cli/src/commands/: article.rs  auth.rs  export.rs  extension.rs  interactive.rs  mod.rs  setup.rs  tag.rs  template.rs  workspace.rs
apps/cli/src/converters/: html_to_md.rs  mod.rs
apps/extension/: README.md  manifest.json
apps/extension/native-host/: com.noet.host.json  install.sh
apps/extension/src/: background.js  content.js
docs/: EDITOR_SELECTORS_INVESTIGATION.md  IMAGE_FEATURE_STATUS.md  IMAGE_IMPLEMENTATION_SUMMARY.md  IMAGE_UPLOAD_INVESTIGATION.md  IMAGE_USAGE.md  MARKDOWN_SUPPORT_TEST.md  NOTE_COM_SELECTORS.md
docs/images/: PLACEHOLDER.md
scripts/: investigate_publish_dialog.js
src/: auth.rs  cli.rs  config.rs  editor.rs  error.rs  main.rs  models.rs  workspace.rs
src/api/: analytics.rs  article.rs  client.rs  engagement.rs  magazine.rs  mod.rs  tag.rs  user.rs
src/commands/: article.rs  auth.rs  engagement.rs  export.rs  interactive.rs  magazine.rs  mod.rs  tag.rs  template.rs  user.rs  workspace.rs
