[package]
name = "noet"
version = "0.1.2"
edition = "2021"
authors = ["kako-jun"]
description = "CLI tool for managing Note.com blog articles with Markdown. Create, publish, and export articles from your terminal with rate limiting and Japanese UI."
license = "MIT"
repository = "https://github.com/kako-jun/noet"
homepage = "https://github.com/kako-jun/noet"
documentation = "https://github.com/kako-jun/noet#readme"
readme = "README.md"
keywords = ["cli", "note", "blog", "markdown", "note-com"]
categories = ["command-line-utilities"]
exclude = [
    ".github/",
    ".gitignore",
    "*.md",
    "!README.md",
]

[[bin]]
name = "noet"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system and paths
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Markdown parsing
pulldown-cmark = "0.12"

# HTML to Markdown conversion
html2md = "0.2"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
colored = "2.1"
dialoguer = "0.11"

# Logging
log = "0.4"
env_logger = "0.11"

# Lazy static initialization
once_cell = "1.21"

# TUI for diff display
ratatui = "0.29"
crossterm = "0.28"

# Diff calculation
similar = "2"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = "3"
