[package]
name = "noet"
version = "0.1.2"
edition = "2021"
authors = ["kako-jun"]
description = "CLI tool for managing Note.com blog articles with Markdown via browser extension."
license = "MIT"
repository = "https://github.com/kako-jun/noet"
homepage = "https://github.com/kako-jun/noet"
documentation = "https://github.com/kako-jun/noet#readme"
readme = "README.md"
keywords = ["cli", "note", "blog", "markdown", "note-com"]
categories = ["command-line-utilities"]
exclude = [
    ".github/",
    ".gitignore",
    "*.md",
    "!README.md",
]

[[bin]]
name = "noet"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# HTTP client (for setup download only)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and paths
dirs = "5.0"

# Error handling
thiserror = "2.0"

# HTML to Markdown conversion
html2md = "0.2"

# Terminal UI
colored = "2.1"
dialoguer = "0.11"

# Logging
log = "0.4"
env_logger = "0.11"

# ZIP extraction
zip = "2.2"

# WebSocket for extension communication
tokio-tungstenite = "0.24"
futures-util = "0.3"

# UUID for request IDs
uuid = { version = "1.11", features = ["v4"] }

# Base64 encoding for images
base64 = "0.22"

# Regex for image extraction
regex = "1.11"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = "3"
